Fix "about" section overflow

--- a/mobile-styles.css
+++ b/mobile-styles.css
@@ -9,6 +9,8 @@
 
     .aboutDiv {
         position: fixed;
+        top: 5%;
+        left: 5%;
         width: 90%;
     }
 
